Add lecture 1 notes

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,15 @@
 \documentclass{article}
+
+\input{preamble}
+
+\title{Math 412/512 Algebraic Number Theory \\
+University of Alberta}
+\author{Adam Topaz}
+\date{Last updated: \today}
+
 \begin{document}
-Hello world!
+\maketitle
+
+\input{lecture01}
+
 \end{document}
