add more for lecture 2

--- a/preamble.tex
+++ b/preamble.tex
@@ -8,6 +8,7 @@
 \newcommand{\Frac}[0]{\operatorname{Frac}}
 \newcommand{\Rbb}[0]{\mathbb{R}}
 \newcommand{\Cbb}[0]{\mathbb{C}}
+\newcommand{\image}[0]{\operatorname{im}}
 
 \renewcommand{\bar}{\overline}
 
