--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,13 @@ University of Alberta}
 \begin{document}
 \maketitle
 
+\section*{Introduction}
+These are lecture notes for Math 412/512, Algebraic Number Theory, taking place at the University of Alberta in the Winter 2023 term.
+These notes are being prepared in collaboration with the students in the course.
+Text labled with the color {\color{red} red} will appear with an acompanying footnote and is typeset in the \LaTeX~source with a \verb-\todo- command.
+These portions of the text should be updated as explained in the corresponding footnote by opening a pull request \href{https://github.com/adamtopaz/UAlberta-412-512-lecture-notes}{on github}.
+Corrections of any typos or inaccuracies are always welcome, also using the pull request workflow.
+
 \input{lecture01}
 \input{lecture02}
 
