--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,8 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{color}
+\usepackage{hyperref}
 
 \newcommand{\Nbb}[0]{\mathbb{N}}
 \newcommand{\Zbb}[0]{\mathbb{Z}}
@@ -9,6 +11,8 @@
 \newcommand{\Rbb}[0]{\mathbb{R}}
 \newcommand{\Cbb}[0]{\mathbb{C}}
 \newcommand{\image}[0]{\operatorname{im}}
+
+\newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
 
 \renewcommand{\bar}{\overline}
 
@@ -20,6 +24,7 @@
 \newtheorem{example}{Example}
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}
+
 
 %%% Local Variables:
 %%% mode: latex
