Start on lecture03

--- a/main.tex
+++ b/main.tex
@@ -19,5 +19,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 
 \input{lecture01}
 \input{lecture02}
+\input{lecture03}
 
 \end{document}
