--- a/preamble.tex
+++ b/preamble.tex
@@ -10,7 +10,12 @@
 \newcommand{\Frac}[0]{\operatorname{Frac}}
 \newcommand{\Rbb}[0]{\mathbb{R}}
 \newcommand{\Cbb}[0]{\mathbb{C}}
+\newcommand{\Fbb}[0]{\mathbb{F}}
+\newcommand{\Ocal}[0]{\mathcal{O}}
 \newcommand{\image}[0]{\operatorname{im}}
+\newcommand{\Trace}[0]{\operatorname{Tr}}
+\newcommand{\Norm}[0]{\operatorname{N}}
+\newcommand{\Hom}[0]{\operatorname{Hom}}
 
 \newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
 
