--- a/lecture02.tex
+++ b/lecture02.tex
@@ -5,7 +5,7 @@ If $A$ is a ring, then an $A$-algebra will be a ring endowed with a \emph{struct
 A morphism $B_{1} \to B_{2}$ of $A$-algebras is a morphism of rings which is compatible with the structure morphisms in the obvious way.
 
 Recall that $A[X_{1},\ldots,X_{n}]$, the polynomial ring in $n$ variables, is the free $A$-algebra on the set $\{X_{1},\ldots,X_{n}\}$.
-Explicitly, what this means is that any function $f : \{X_1,\ldots,X_n\} \to B$ extends uniquely to a morphism of $A$-algebras $A[X_1,\ldots,X_n] \to B$.
+Explicitly, what this means is that any function $f : \{X_1,\ldots,X_n\} \to B$ extends in a unique way to a morphism of $A$-algebras $A[X_1,\ldots,X_n] \to B$.
 Thus, if $B$ is an $A$-algebra and $b_{1},\ldots,b_{n} \in B$ are given, then there is a unique morphism of $A$-algebras
 \[ A[X_{1},\ldots,X_{n}] \to B \]
 satisfying $X_{i} \mapsto b_{i}$.
