--- a/lecture02.tex
+++ b/lecture02.tex
@@ -9,8 +9,9 @@ Explicitly, what this means is that any function $f : \{X_1,\ldots,X_n\} \to B$ 
 Thus, if $B$ is an $A$-algebra and $b_{1},\ldots,b_{n} \in B$ are given, then there is a unique morphism of $A$-algebras
 \[ A[X_{1},\ldots,X_{n}] \to B \]
 satisfying $X_{i} \mapsto b_{i}$.
-This map is called \todo{\emph{evaluation}}{Describe this map explicitly.} at $b_{1},\ldots,b_{n}$, and will be denoted in the usual way as
+This map is called \emph{evaluation} at $b_{1},\ldots,b_{n}$, and will be denoted in the usual way as
 \[ f(X_{1},\ldots,X_{n}) \mapsto f(b_{1},\ldots,b_{n}). \]
+If we express a polynomial $f$ as $f = \sum_{i} a_i} X^i$, where $i$ is a multiindex, then $f(b_1,\ldots,b_n) = \sum_i a_i b^i$.
 
 
 \begin{definition}
