--- a/lecture02.tex
+++ b/lecture02.tex
@@ -11,7 +11,7 @@ Thus, if $B$ is an $A$-algebra and $b_{1},\ldots,b_{n} \in B$ are given, then th
 satisfying $X_{i} \mapsto b_{i}$.
 This map is called \emph{evaluation} at $b_{1},\ldots,b_{n}$, and will be denoted in the usual way as
 \[ f(X_{1},\ldots,X_{n}) \mapsto f(b_{1},\ldots,b_{n}). \]
-If we express a polynomial $f$ as $f = \sum_{i} a_i} X^i$, where $i$ is a multiindex, then $f(b_1,\ldots,b_n) = \sum_i a_i b^i$.
+If we express a polynomial $f$ as $f = \sum_{i} a_i X^i$, where $i$ is a multiindex, then $f(b_1,\ldots,b_n) = \sum_i a_i b^i$.
 
 
 \begin{definition}
