move prop to lecture 4

--- a/main.tex
+++ b/main.tex
@@ -20,5 +20,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture01}
 \input{lecture02}
 \input{lecture03}
+\input{lecture04}
 
 \end{document}
