--- a/lecture02.tex
+++ b/lecture02.tex
@@ -115,7 +115,7 @@ Write $B$ for the normalization of $A$ in $L$.
   One has $B \cap K = A$.
 \end{lemma}
 \begin{proof}
-  \todo{Use the normality of $A$.}{Explain!}
+  $A\subset B\cap K$ is trivial. For the other direction, we have $B\cap K = \{x\in K\colon x \text{ is integral over } A\} = A$. The second equality is the definition of normality. 
 \end{proof}
 
 \begin{lemma}
