--- a/preamble.tex
+++ b/preamble.tex
@@ -21,6 +21,7 @@
 \newcommand{\smin}[0]{\smallsetminus}
 \newcommand{\Afrak}[0]{\mathfrak{A}}
 \newcommand{\afrak}[0]{\mathfrak{a}}
+\newcommand{\mfrak}[0]{\mathfrak{m}}
 \newcommand{\Mfrak}[0]{\mathfrak{M}}
 
 \newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
