--- a/main.tex
+++ b/main.tex
@@ -21,5 +21,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture02}
 \input{lecture03}
 \input{lecture04}
+\input{lecture05}
 
 \end{document}
