--- a/preamble.tex
+++ b/preamble.tex
@@ -13,7 +13,9 @@
 \newcommand{\Fbb}[0]{\mathbb{F}}
 \newcommand{\Ocal}[0]{\mathcal{O}}
 \newcommand{\pfrak}[0]{\mathfrak{p}}
+\newcommand{\qfrak}[0]{\mathfrak{q}}
 \newcommand{\Pfrak}[0]{\mathfrak{P}}
+\newcommand{\Qfrak}[0]{\mathfrak{Q}}
 \newcommand{\image}[0]{\operatorname{im}}
 \newcommand{\Trace}[0]{\operatorname{Tr}}
 \newcommand{\Norm}[0]{\operatorname{N}}
