--- a/preamble.tex
+++ b/preamble.tex
@@ -23,6 +23,8 @@
 \newcommand{\smin}[0]{\smallsetminus}
 \newcommand{\Afrak}[0]{\mathfrak{A}}
 \newcommand{\afrak}[0]{\mathfrak{a}}
+\newcommand{\Bfrak}[0]{\mathfrak{B}}
+\newcommand{\bfrak}[0]{\mathfrak{b}}
 \newcommand{\mfrak}[0]{\mathfrak{m}}
 \newcommand{\Mfrak}[0]{\mathfrak{M}}
 
