--- a/lecture03.tex
+++ b/lecture03.tex
@@ -25,7 +25,7 @@ Let $x \in L$ be given, and write $M_{x}$ for the $K$-linear map $L \to L$ given
   The map $\Trace_{L|K}$ is additive and the map $\Norm_{L|K}$ is multiplicative.
 \end{lemma}
 \begin{proof}
-  For any $x_1, x_2\in L$, we have $\Trace_{L|K}(x_1 + x_2) = \Trace(M_{x_1 + x_2}) = \Trace(M_{x_1} + M_{x_2}) = \Trace(M_{x_1}) + \Trace(M_{x_2}) = \Trace_{L|K}(x_1) + \Trace_{L|K}(x_2)$ and $\Norm_{L|K}(x_1x_2) = \det(M_{x_1x_2}) = \det(M_{x_1} M_{x_2}) = \det(M_{x_1})\cdot \det(M_{x_2}) = \Norm_{L|K}(x_1)\cdot \Norm_{L|K}(x_2)$.
+  For any $x_1, x_2\in L$, we have $\Trace_{L|K}(x_1 + x_2) = \Trace(M_{x_1 + x_2}) = \Trace(M_{x_1} + M_{x_2}) = \Trace(M_{x_1}) + \Trace(M_{x_2}) = \Trace_{L|K}(x_1) + \Trace_{L|K}(x_2)$ and $\Norm_{L|K}(x_1x_2) = \det(M_{x_1x_2}) = \det(M_{x_1} \circ M_{x_2}) = \det(M_{x_1})\cdot \det(M_{x_2}) = \Norm_{L|K}(x_1)\cdot \Norm_{L|K}(x_2)$.
 \end{proof}
 
 The trace and norm can be described using Galois theory.
