--- a/lecture05.tex
+++ b/lecture05.tex
@@ -64,7 +64,7 @@ Explicitly, elements of $\afrak \cdot \bfrak$ are finite sums of the form
 \[ \sum_{i} a_{i} b_{i}, \ \ a_{i} \in \afrak, \ \ b_{i} \in \bfrak. \]
 
 Our goal is now to prove the following theorem.
-\begin{theorem}
+\begin{theorem}\label{theorem:ideal_factorization}
   Every nonzero ideal $\afrak$ of $\Ocal$ admits an essentially unique factorization
   \[ \afrak = \pfrak_{1} \cdots \pfrak_{k}, \]
   where $\pfrak_{i}$ are nonzero prime ideals.
@@ -75,7 +75,7 @@ We will actually prove more.
   A \emph{fractional ideal} of $K$ is a finitely-generated nonzero $\Ocal$-submodule of $K$.
 \end{definition}
 
-\begin{theorem}
+\begin{theorem}\label{theorem:fractional_ideal_factorization}
   Every fractional ideal $\afrak$ admits a unique representation of the form
   \[ \afrak = \prod_{\pfrak} \pfrak^{v_{\pfrak}}, \]
   where $v_{\pfrak} \in \Zbb$, $\pfrak$ varies over the nonzero primes of $\Ocal$, and all but finitely many of the $v_{\pfrak}$ are zero.
