--- a/main.tex
+++ b/main.tex
@@ -22,5 +22,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture03}
 \input{lecture04}
 \input{lecture05}
+\input{lecture06}
 
 \end{document}
