--- a/preamble.tex
+++ b/preamble.tex
@@ -27,6 +27,7 @@
 \newcommand{\bfrak}[0]{\mathfrak{b}}
 \newcommand{\mfrak}[0]{\mathfrak{m}}
 \newcommand{\Mfrak}[0]{\mathfrak{M}}
+\newcommand{\Gal}[0]{\operatorname{Gal}}
 
 \newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
 
